# nxt

./: .gitignore  README.md  compare_latex_outputs.py  pyproject.toml
legacy/: README.md  db.sqlite3  generate_dynamic_schema.py  generate_latex_inputs.py  parse.py  read_database.py  requirements.txt  threat-model-schema.json  tm.yaml  view.py  views.txt
src/nxt/: __init__.py
src/nxt/examples/: __init__.py
src/nxt/examples/evoting/: __init__.py  attacks.py  compat.py  contexts.py  mitigations.py  patterns.py  properties.py  views.py
src/nxt/model/: __init__.py  attacks.py  compat.py  contexts.py  generate_latex_inputs.py  mitigations.py  patterns.py  properties.py  view_cli.py  views.py  visualize.py
src/nxt/schema/: __init__.py  model.py  types.py
