[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nxt"
version = "0.1.0"
description = "Threat modeling with NetworkX - express threat models as typed Python objects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Free & Fair" },
]
keywords = ["security", "threat-modeling", "networkx", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nxt"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
